改为使用 PostgreSQL 存储管理数据

--- a/部署说明.md
+++ b/部署说明.md
@@ -1,75 +1,96 @@
-# NetBird VPN 部署包使用说明
+# NetBird VPN 部署说明（PostgreSQL版本）
+
+## 🎯 快速上手指南
+
+本部署包提供了基于官方文档标准化的 NetBird VPN 自托管解决方案，使用 PostgreSQL 数据库，适合生产环境部署。
 
 ## 📦 文件清单
 
-你现在有以下文件：
-- `docker-compose.yml` - Docker编排配置文件（使用v0.47.2稳定版本）
-- `README.md` - 详细的部署和维护文档
-- `deploy.sh` - 一键部署脚本
-- `部署说明.md` - 本文件
-
-## 🚀 快速部署步骤
-
-### 1. 上传文件到服务器
-将以上文件上传到你的Ubuntu 24.04服务器的 `/data/netbird/` 目录：
-
-```bash
-# 在服务器上创建目录
-sudo mkdir -p /data/netbird
-sudo chown $USER:$USER /data/netbird
-
-# 使用scp上传文件（在本地执行）
-scp docker-compose.yml your-server:/data/netbird/
-scp README.md your-server:/data/netbird/
-scp deploy.sh your-server:/data/netbird/
+```
+014-netbird-vpn/
+├── 📄 docker-compose.yml    # 主配置文件（5个服务）
+├── 📄 turnserver.conf       # Coturn STUN/TURN 配置
+├── 📜 deploy.sh            # 一键部署脚本
+├── 📚 README.md            # 详细文档
+└── 📋 部署说明.md          # 快速指南（本文件）
 ```
 
-### 2. 执行一键部署
+## 🚀 一键部署
 
+### 1. 上传文件到服务器
 ```bash
-# 登录到你的服务器
-ssh your-server
+# 上传到云服务器的 /tmp 目录
+scp -r 014-netbird-vpn/ user@120.50.145.50:/tmp/
+```
 
-# 进入目录并执行部署
-cd /data/netbird
+### 2. 执行部署
+```bash
+# SSH 连接到服务器
+ssh user@120.50.145.50
+
+# 进入目录
+cd /tmp/014-netbird-vpn/
+
+# 执行一键部署
 chmod +x deploy.sh
 ./deploy.sh
 ```
 
-### 3. 根据提示配置
+### 3. 选择配置模式
+部署过程中会提示选择：
 
-脚本会询问你：
-- 是否使用域名（推荐）还是IP地址（测试）
-- 如果使用域名，输入你的域名和管理员邮箱
+**🌐 域名模式（推荐）**
+- 支持 HTTPS 和 Let's Encrypt 自动证书
+- 访问地址：`https://your.domain.com:8080`
+- 需要提供域名和管理员邮箱
 
-## 🔧 核心配置信息
+**📍 IP模式（测试）**
+- 使用 HTTP 协议
+- 访问地址：`http://120.50.145.50:8080`
+- 适合快速测试和内网部署
 
-### 版本信息
-- **NetBird Management**: `netbirdio/management:v0.47.2`
-- **NetBird Signal**: `netbirdio/signal:v0.47.2`
-- **NetBird Relay**: `netbirdio/relay:v0.47.2`
-- **Coturn**: `coturn/coturn:4.6.2-r3`
-- **PostgreSQL**: `postgres:16-alpine`
+## 🎛️ 服务访问
 
-### 网络端口
-- **80/443**: Web管理界面
-- **10000**: Signal服务
-- **33073**: Relay服务
-- **3478**: STUN/TURN
-- **49152-65535/UDP**: TURN端口范围
+### Web 管理界面
+- **域名模式**: `https://your.domain.com:8080`
+- **IP模式**: `http://120.50.145.50:8080`
 
-### 公网IP配置
-已预配置你的公网IP：`120.50.145.50`
+### 管理 API
+- **域名模式**: `https://your.domain.com:33073`
+- **IP模式**: `http://120.50.145.50:33073`
 
-## 📝 重要提醒
+### 服务端口分布
+```
+8080  → Dashboard (Web界面)
+33073 → Management (API & gRPC)
+10000 → Signal (信令服务)
+33080 → Relay (中继服务)
+3478  → Coturn (STUN/TURN)
+5432  → PostgreSQL (数据库)
+```
 
-1. **域名解析**：如果使用域名，请确保域名已正确解析到 `120.50.145.50`
-2. **防火墙**：脚本会自动配置UFW防火墙规则
-3. **SSL证书**：使用域名时会自动申请Let's Encrypt证书
-4. **数据持久化**：所有重要数据都存储在 `/data/netbird/` 目录下
+## 🗄️ PostgreSQL 数据库
 
-## 🔄 常用操作
+### 优势对比
+| 特性 | SQLite (默认) | PostgreSQL (本方案) |
+|------|---------------|-------------------|
+| 并发性能 | 有限 | 优秀 |
+| 数据一致性 | 基础 | 强ACID |
+| 备份恢复 | 文件拷贝 | 专业工具 |
+| 扩展性 | 受限 | 水平扩展 |
+| 适用场景 | 小型部署 | 生产环境 |
 
+### 连接信息
+```
+数据库: netbird
+用户名: netbird
+密码: NetBirdDB2024!
+端口: 5432 (内部)
+```
+
+## 🔧 快速运维
+
+### 基本操作
 ```bash
 cd /data/netbird
 
@@ -84,23 +105,179 @@ docker-compose restart
 
 # 停止服务
 docker-compose down
-
-# 更新到最新版本
-docker-compose pull && docker-compose up -d
 ```
 
-## 📱 客户端连接
+### 数据库操作
+```bash
+# 连接数据库
+docker-compose exec postgres psql -U netbird -d netbird
 
-1. 访问管理界面（域名或IP）
-2. 创建管理员账户
-3. 生成Setup Key
-4. 在客户端设备安装NetBird并使用Setup Key连接
+# 备份数据库
+docker-compose exec postgres pg_dump -U netbird netbird > backup.sql
 
-## 🆘 如遇问题
+# 查看数据库状态
+docker-compose exec postgres pg_isready -U netbird -d netbird
+```
 
-详细的故障排除方法请参考 `README.md` 文档。
+## 🛠️ 常见问题
+
+### Q1: 服务无法启动
+```bash
+# 检查端口占用
+sudo netstat -tlnp | grep -E ':(8080|33073|10000|33080|3478)'
+
+# 检查防火墙
+sudo ufw status
+
+# 查看错误日志
+docker-compose logs [服务名]
+```
+
+### Q2: 无法访问管理界面
+```bash
+# 检查Dashboard服务
+docker-compose logs dashboard
+
+# 检查Management API
+curl -f http://localhost:33073/api/status
+
+# 验证网络连接
+docker network inspect netbird_netbird
+```
+
+### Q3: 数据库连接问题
+```bash
+# 检查数据库日志
+docker-compose logs postgres
+
+# 测试连接
+docker-compose exec postgres pg_isready -U netbird -d netbird
+
+# 检查环境变量
+docker-compose exec management env | grep POSTGRES
+```
+
+## 📋 部署后配置
+
+### 1. 访问管理界面
+- 打开浏览器访问 Web 界面
+- 创建管理员账户
+- 配置组织信息
+
+### 2. 配置身份认证
+- 选择身份提供商（IdP）
+- 或使用本地用户认证
+- 配置用户注册策略
+
+### 3. 生成 Setup Key
+- 在管理界面创建 Setup Key
+- 设置过期时间和使用次数
+- 用于客户端设备接入
+
+### 4. 客户端部署
+```bash
+# Linux 客户端安装
+curl -fsSL https://pkgs.netbird.io/install.sh | sh
+
+# 使用 Setup Key 连接
+netbird up --setup-key YOUR_SETUP_KEY
+```
+
+## 🔒 安全建议
+
+### 基础安全
+- ✅ 更改默认密码（数据库、TURN服务）
+- ✅ 配置防火墙（脚本已自动配置）
+- ✅ 使用域名模式启用 HTTPS
+- ✅ 定期更新服务版本
+
+### 高级安全
+- 🔧 配置反向代理
+- 🔧 启用 WAF（Web应用防火墙）
+- 🔧 限制管理界面访问IP
+- 🔧 启用访问日志审计
+
+## 📊 监控建议
+
+### 服务健康检查
+```bash
+# 服务状态监控
+docker-compose ps
+
+# 资源使用监控
+docker stats
+
+# 日志监控
+docker-compose logs --tail=100 | grep -i error
+```
+
+### 数据库监控
+```bash
+# 连接数监控
+docker-compose exec postgres psql -U netbird -d netbird -c "SELECT count(*) FROM pg_stat_activity;"
+
+# 数据库大小
+docker-compose exec postgres psql -U netbird -d netbird -c "SELECT pg_size_pretty(pg_database_size('netbird'));"
+```
+
+## 🔄 备份策略
+
+### 自动备份脚本
+```bash
+# 创建备份脚本
+cat > /data/netbird/backup.sh << 'EOF'
+#!/bin/bash
+BACKUP_DIR="/data/netbird/backups"
+DATE=$(date +%Y%m%d_%H%M%S)
+
+mkdir -p $BACKUP_DIR
+
+# 备份数据库
+docker-compose exec postgres pg_dump -U netbird netbird > $BACKUP_DIR/netbird_db_$DATE.sql
+
+# 备份配置文件
+tar -czf $BACKUP_DIR/netbird_config_$DATE.tar.gz \
+  docker-compose.yml turnserver.conf config/
+
+# 清理7天前的备份
+find $BACKUP_DIR -name "*.sql" -mtime +7 -delete
+find $BACKUP_DIR -name "*.tar.gz" -mtime +7 -delete
+
+echo "Backup completed: $DATE"
+EOF
+
+chmod +x /data/netbird/backup.sh
+
+# 添加定时任务（每天凌晨2点备份）
+echo "0 2 * * * /data/netbird/backup.sh >> /var/log/netbird-backup.log 2>&1" | crontab -
+```
+
+## 📞 技术支持
+
+### 官方资源
+- 📚 [NetBird 官方文档](https://docs.netbird.io/)
+- 🐙 [GitHub 项目](https://github.com/netbirdio/netbird)
+- 💬 [社区讨论](https://github.com/netbirdio/netbird/discussions)
+
+### 部署支持
+如遇问题，请提供：
+1. 操作系统版本：`lsb_release -a`
+2. 服务状态：`docker-compose ps`
+3. 错误日志：`docker-compose logs [服务名]`
+4. 网络配置：`sudo ufw status`
 
 ---
 
-**预计部署时间**: 5-10分钟  
-**推荐配置**: 2CPU + 4GB内存 + 20GB磁盘 
+## ⏱️ 预计部署时间
+
+| 阶段 | 时间 | 说明 |
+|------|------|------|
+| 依赖安装 | 2-3分钟 | Docker、工具包安装 |
+| 数据库启动 | 1-2分钟 | PostgreSQL 初始化 |
+| 服务启动 | 3-5分钟 | NetBird 各服务启动 |
+| 配置验证 | 2-3分钟 | 健康检查和测试 |
+| **总计** | **8-15分钟** | 取决于网络和服务器性能 |
+
+---
+
+**🎉 部署完成后，你将拥有一个功能完整、生产就绪的 NetBird VPN 服务！**
