启动配置优化，和官网兼容

--- a/部署说明.md
+++ b/部署说明.md
@@ -1,283 +1,121 @@
-# NetBird VPN 部署说明（PostgreSQL版本）
+# NetBird VPN 快速部署指南
 
-## 🎯 快速上手指南
-
-本部署包提供了基于官方文档标准化的 NetBird VPN 自托管解决方案，使用 PostgreSQL 数据库，适合生产环境部署。
-
-## 📦 文件清单
-
-```
-014-netbird-vpn/
-├── 📄 docker-compose.yml    # 主配置文件（5个服务）
-├── 📄 turnserver.conf       # Coturn STUN/TURN 配置
-├── 📜 deploy.sh            # 一键部署脚本
-├── 📚 README.md            # 详细文档
-└── 📋 部署说明.md          # 快速指南（本文件）
-```
+基于 NetBird 官方 `getting-started-with-zitadel.sh` 脚本的5分钟快速部署指南。
 
 ## 🚀 一键部署
 
-### 1. 上传文件到服务器
+### 前置条件
+- Ubuntu/Debian 系统
+- 拥有公网 IP 的服务器
+- 已配置域名解析到服务器IP
+- 安装 Docker、jq、curl
+
+### 执行官方部署脚本
 ```bash
-# 上传到云服务器的 /tmp 目录
-scp -r 014-netbird-vpn/ user@120.50.145.50:/tmp/
+# 设置你的域名（请替换为你的实际域名）
+export NETBIRD_DOMAIN=your-domain.com
+
+# 执行官方一键部署脚本
+curl -fsSL https://github.com/netbirdio/netbird/releases/latest/download/getting-started-with-zitadel.sh | bash
 ```
 
-### 2. 执行部署
+## 🔑 管理员登录
+
+部署完成后，访问管理界面：
+
+### 访问地址
+```
+NetBird Dashboard: https://your-domain.com
+```
+
+### 登录凭据
+部署完成后，终端会显示管理员账户信息，也会保存在 `.env` 文件中：
+```
+Username: admin@your-domain.com
+Password: <随机生成的密码>
+```
+
+> ⚠️ **安全提醒**: 首次登录后请立即修改默认密码！
+
+## 📱 客户端安装
+
+### 官方客户端下载
+访问官方安装页面获取各平台客户端：
+```
+https://app.netbird.io/install
+```
+
+支持的平台：
+- **Windows**: .exe 安装包
+- **macOS**: .dmg 安装包
+- **Linux**: .deb/.rpm 包或二进制文件
+- **Android**: Google Play Store
+- **iOS**: App Store
+
+## 🛡️ 安全组配置
+
+### 必需端口列表
+
+根据官方文档和实际的 `docker-compose.yml` 配置，以下是真正需要开放的端口：
+
+| 序号 | 服务 | 协议 | 端口范围 | 授权对象 | 说明 |
+|------|------|------|----------|----------|------|
+| 1 | Dashboard & Management HTTP | TCP | 80/80 | 0.0.0.0/0 | Caddy 反代到 dashboard 和 management HTTP；对外全网开放 |
+| 2 | Dashboard & Management HTTPS | TCP | 443/443 | 0.0.0.0/0 | Caddy 反代到 dashboard 和 management HTTPS；全网开放 |
+| 3 | Caddy HTTP/3 QUIC（可选） | UDP | 443/443 | 0.0.0.0/0 | 如果开启了 HTTP/3，需要让客户端走 UDP 443 |
+| 4 | Coturn STUN 协商 | UDP | 3478/3478 | 0.0.0.0/0 或 VPN 网段 | Coturn 在 host 网络模式下监听 3478/UDP |
+| 5 | Coturn TURN 中继 | UDP | 49152/65535 | 0.0.0.0/0 或 VPN 网段 | Coturn 中继端口范围 |
+| 6 | Coturn TURN（TCP fallback） | TCP | 3478/3478 | 0.0.0.0/0 或 VPN 网段 | 部分网络需要 TCP TURN |
+| 7 | Caddy 管理界面（可选） | TCP | 8080/8080 | 你的管理 IP 列表 | 如果想用 Caddy 的 Admin API，建议限制到可信 IP |
+
+### 重要说明
+
+- **官方脚本设计**: 所有 NetBird 服务（signal、relay、management）都通过 Caddy 80/443 反向代理访问，因此安全组里不需要开放 33073、10000、33080 等端口。
+- **端口映射**: 如果你确实希望直接访问某个服务的底层端口，需要在 `docker-compose.yml` 里加 `ports:` 映射。
+- **最小化暴露**: 强烈建议只将必须的端口对公网开放，管理类接口（如 8080）请务必加 IP 白名单。
+
+### Ubuntu UFW 配置
 ```bash
-# SSH 连接到服务器
-ssh user@120.50.145.50
-
-# 进入目录
-cd /tmp/014-netbird-vpn/
-
-# 执行一键部署
-chmod +x deploy.sh
-./deploy.sh
+sudo ufw allow 80/tcp
+sudo ufw allow 443/tcp
+sudo ufw allow 443/udp
+sudo ufw allow 3478/udp
+sudo ufw allow 49152:65535/udp
+sudo ufw enable
 ```
 
-### 3. 选择配置模式
-部署过程中会提示选择：
+### 阿里云安全组配置
+按上面的7条规则配置，端口范围格式写成 `开始端口/结束端口`，来源地址可以一次性填多个逗号分隔。
 
-**🌐 域名模式（推荐）**
-- 支持 HTTPS 和 Let's Encrypt 自动证书
-- 访问地址：`https://your.domain.com:8080`
-- 需要提供域名和管理员邮箱
+## 🔧 管理命令
 
-**📍 IP模式（测试）**
-- 使用 HTTP 协议
-- 访问地址：`http://120.50.145.50:8080`
-- 适合快速测试和内网部署
-
-## 🎛️ 服务访问
-
-### Web 管理界面
-- **域名模式**: `https://your.domain.com:8080`
-- **IP模式**: `http://120.50.145.50:8080`
-
-### 管理 API
-- **域名模式**: `https://your.domain.com:33073`
-- **IP模式**: `http://120.50.145.50:33073`
-
-### 服务端口分布
-```
-8080  → Dashboard (Web界面)
-33073 → Management (API & gRPC)
-10000 → Signal (信令服务)
-33080 → Relay (中继服务)
-3478  → Coturn (STUN/TURN)
-5432  → PostgreSQL (数据库)
-```
-
-## 🗄️ PostgreSQL 数据库
-
-### 优势对比
-| 特性 | SQLite (默认) | PostgreSQL (本方案) |
-|------|---------------|-------------------|
-| 并发性能 | 有限 | 优秀 |
-| 数据一致性 | 基础 | 强ACID |
-| 备份恢复 | 文件拷贝 | 专业工具 |
-| 扩展性 | 受限 | 水平扩展 |
-| 适用场景 | 小型部署 | 生产环境 |
-
-### 连接信息
-```
-数据库: netbird
-用户名: netbird
-密码: NetBirdDB2024!
-端口: 5432 (内部)
-```
-
-## 🔧 快速运维
-
-### 基本操作
+### 查看服务状态
 ```bash
-cd /data/netbird
-
-# 查看服务状态
-docker-compose ps
-
-# 查看日志
-docker-compose logs -f
-
-# 重启服务
-docker-compose restart
-
-# 停止服务
-docker-compose down
+docker compose ps
 ```
 
-### 数据库操作
+### 查看日志
 ```bash
-# 连接数据库
-docker-compose exec postgres psql -U netbird -d netbird
-
-# 备份数据库
-docker-compose exec postgres pg_dump -U netbird netbird > backup.sql
-
-# 查看数据库状态
-docker-compose exec postgres pg_isready -U netbird -d netbird
+docker compose logs -f
 ```
 
-## 🛠️ 常见问题
-
-### Q1: 服务无法启动
+### 重启服务
 ```bash
-# 检查端口占用
-sudo netstat -tlnp | grep -E ':(8080|33073|10000|33080|3478)'
-
-# 检查防火墙
-sudo ufw status
-
-# 查看错误日志
-docker-compose logs [服务名]
+docker compose restart
 ```
 
-### Q2: 无法访问管理界面
+### 备份配置
 ```bash
-# 检查Dashboard服务
-docker-compose logs dashboard
-
-# 检查Management API
-curl -f http://localhost:33073/api/status
-
-# 验证网络连接
-docker network inspect netbird_netbird
+mkdir backup
+cp docker-compose.yml Caddyfile zitadel.env dashboard.env turnserver.conf management.json relay.env zdb.env backup/
 ```
 
-### Q3: 数据库连接问题
-```bash
-# 检查数据库日志
-docker-compose logs postgres
+## 📚 更多信息
 
-# 测试连接
-docker-compose exec postgres pg_isready -U netbird -d netbird
-
-# 检查环境变量
-docker-compose exec management env | grep POSTGRES
-```
-
-## 📋 部署后配置
-
-### 1. 访问管理界面
-- 打开浏览器访问 Web 界面
-- 创建管理员账户
-- 配置组织信息
-
-### 2. 配置身份认证
-- 选择身份提供商（IdP）
-- 或使用本地用户认证
-- 配置用户注册策略
-
-### 3. 生成 Setup Key
-- 在管理界面创建 Setup Key
-- 设置过期时间和使用次数
-- 用于客户端设备接入
-
-### 4. 客户端部署
-```bash
-# Linux 客户端安装
-curl -fsSL https://pkgs.netbird.io/install.sh | sh
-
-# 使用 Setup Key 连接
-netbird up --setup-key YOUR_SETUP_KEY
-```
-
-## 🔒 安全建议
-
-### 基础安全
-- ✅ 更改默认密码（数据库、TURN服务）
-- ✅ 配置防火墙（脚本已自动配置）
-- ✅ 使用域名模式启用 HTTPS
-- ✅ 定期更新服务版本
-
-### 高级安全
-- 🔧 配置反向代理
-- 🔧 启用 WAF（Web应用防火墙）
-- 🔧 限制管理界面访问IP
-- 🔧 启用访问日志审计
-
-## 📊 监控建议
-
-### 服务健康检查
-```bash
-# 服务状态监控
-docker-compose ps
-
-# 资源使用监控
-docker stats
-
-# 日志监控
-docker-compose logs --tail=100 | grep -i error
-```
-
-### 数据库监控
-```bash
-# 连接数监控
-docker-compose exec postgres psql -U netbird -d netbird -c "SELECT count(*) FROM pg_stat_activity;"
-
-# 数据库大小
-docker-compose exec postgres psql -U netbird -d netbird -c "SELECT pg_size_pretty(pg_database_size('netbird'));"
-```
-
-## 🔄 备份策略
-
-### 自动备份脚本
-```bash
-# 创建备份脚本
-cat > /data/netbird/backup.sh << 'EOF'
-#!/bin/bash
-BACKUP_DIR="/data/netbird/backups"
-DATE=$(date +%Y%m%d_%H%M%S)
-
-mkdir -p $BACKUP_DIR
-
-# 备份数据库
-docker-compose exec postgres pg_dump -U netbird netbird > $BACKUP_DIR/netbird_db_$DATE.sql
-
-# 备份配置文件
-tar -czf $BACKUP_DIR/netbird_config_$DATE.tar.gz \
-  docker-compose.yml turnserver.conf config/
-
-# 清理7天前的备份
-find $BACKUP_DIR -name "*.sql" -mtime +7 -delete
-find $BACKUP_DIR -name "*.tar.gz" -mtime +7 -delete
-
-echo "Backup completed: $DATE"
-EOF
-
-chmod +x /data/netbird/backup.sh
-
-# 添加定时任务（每天凌晨2点备份）
-echo "0 2 * * * /data/netbird/backup.sh >> /var/log/netbird-backup.log 2>&1" | crontab -
-```
-
-## 📞 技术支持
-
-### 官方资源
-- 📚 [NetBird 官方文档](https://docs.netbird.io/)
-- 🐙 [GitHub 项目](https://github.com/netbirdio/netbird)
-- 💬 [社区讨论](https://github.com/netbirdio/netbird/discussions)
-
-### 部署支持
-如遇问题，请提供：
-1. 操作系统版本：`lsb_release -a`
-2. 服务状态：`docker-compose ps`
-3. 错误日志：`docker-compose logs [服务名]`
-4. 网络配置：`sudo ufw status`
+- **官方文档**: https://docs.netbird.io/selfhosted/selfhosted-quickstart
+- **客户端下载**: https://app.netbird.io/install
+- **GitHub**: https://github.com/netbirdio/netbird
 
 ---
 
-## ⏱️ 预计部署时间
-
-| 阶段 | 时间 | 说明 |
-|------|------|------|
-| 依赖安装 | 2-3分钟 | Docker、工具包安装 |
-| 数据库启动 | 1-2分钟 | PostgreSQL 初始化 |
-| 服务启动 | 3-5分钟 | NetBird 各服务启动 |
-| 配置验证 | 2-3分钟 | 健康检查和测试 |
-| **总计** | **8-15分钟** | 取决于网络和服务器性能 |
-
----
-
-**🎉 部署完成后，你将拥有一个功能完整、生产就绪的 NetBird VPN 服务！**
+**注意**: 本指南基于 NetBird 官方 `getting-started-with-zitadel.sh` 脚本，确保与官方保持一致。
